--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -223,7 +223,6 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 179.35.10.212;
 allow 179.43.128.16;
 allow 179.43.134.19;
 allow 179.43.159.194;
@@ -893,7 +892,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -905,11 +903,9 @@ allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
-allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
-allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1171,6 +1167,7 @@ allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
 allow 2a02:c204:2261:2270::1;
 allow 2a02:c204:2263:5153::1;
+allow 2a02:c207:2284:5299::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
 allow 2a03:4000:13:7c3:dead:beef:ca1f:1337;
@@ -1465,6 +1462,7 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:16a4::1;
 allow 2a0f:85c1:356:231b::1;
+allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5a46::1;
 allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:85c1:356:62ed::1;
@@ -1769,6 +1767,7 @@ allow 64.190.76.4;
 allow 65.87.7.198;
 allow 66.146.193.33;
 allow 66.220.242.222;
+allow 66.78.40.182;
 allow 66.78.40.210;
 allow 66.78.40.225;
 allow 66.94.111.228;
@@ -1818,6 +1817,7 @@ allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.224.201;
 allow 84.239.46.144;
+allow 84.247.176.213;
 allow 85.93.218.204;
 allow 85.93.31.31;
 allow 86.107.101.234;
@@ -1870,7 +1870,6 @@ allow 93.123.109.116;
 allow 93.123.109.44;
 allow 93.123.12.112;
 allow 93.94.51.243;
-allow 93.94.52.229;
 allow 93.95.227.37;
 allow 93.95.228.105;
 allow 93.95.228.125;
