--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -359,6 +359,7 @@ deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
 deny 2a02:c204:2261:2270::1;
 deny 2a02:c204:2263:5153::1;
+deny 2a02:c207:2284:5299::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
 deny 2a03:4000:13:7c3:dead:beef:ca1f:1337;
@@ -653,6 +654,7 @@ deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:16a4::1;
 deny 2a0f:85c1:356:231b::1;
+deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:5a46::1;
 deny 2a0f:85c1:356:5c50::1;
 deny 2a0f:85c1:356:62ed::1;
