--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -121,7 +121,6 @@ allow 125.253.56.119;
 allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
-allow 130.193.15.79;
 allow 131.72.79.38;
 allow 136.244.111.163;
 allow 138.59.18.110;
@@ -901,12 +900,12 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
+allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
-allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
-allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -942,6 +941,7 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1588,6 +1588,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1648,7 +1649,6 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
-allow 45.143.200.32;
 allow 45.145.93.133;
 allow 45.148.10.111;
 allow 45.154.98.33;
